--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,8 @@
     html,
-    body {
+    body,
+    #root {
         background-color: #191d2c !important;
+        height: 100vh;
     }
     /* Extra small devices (phones, 600px and down) */
     @media only screen and (max-width: 600px) {
@@ -84,4 +86,8 @@
 
     .footer a{
         text-decoration: underline !important;
+    }
+
+    .app {
+        height: 100%;
     }
